[package]
name = "plugin"
version = "0.1.0"
edition = "2021"
description = "Plugin support library"
readme = "README.md"
repository = "https://github.com/CIAO-systems/rite"
license = "Apache-2.0"

[dependencies]
import = { git = "https://github.com/CIAO-systems/rite-lib-import.git" }
export = { git ="https://github.com/CIAO-systems/rite-lib-export.git" }
transform = { git = "https://github.com/CIAO-systems/rite-lib-transform.git" }

libloading = "0.8"
log = "0.4"
log4rs = "1.3"
